Fixed bugs with ul in footer, and decreased font-size of h2 on mobile screen

--- a/srcs/styles/_mobile.scss
+++ b/srcs/styles/_mobile.scss
@@ -23,6 +23,9 @@
         width: 100%;
         padding: 5rem;
     }
+    .contacts-container ul {
+        padding-top: 2rem;
+    }
 }
 
 @media screen and (max-width:1425px){
@@ -85,6 +88,9 @@
 }
 
 @media screen and (max-width:650px) {
+    .hero h2 {
+        font-size: 3.6rem;
+    }
     .translation-type{
         padding: 2rem;
     }
